# bevy15-learning-project

./: .gitignore  Cargo.toml  LICENSE  README.md  feature_garden.blend  feature_garden.blend1  justfile  level_load_test.blend  level_load_test.blend1
assets/character/: test_char.json  valeros.json
assets/item/: test_basic.json  test_weapon.json
assets/level/: feature_garden.glb
assets/shaders/: post_process_test.wgsl
src/: ext_asset_server.rs  game_states.rs  health.rs  main.rs  post_process.rs  settings.rs  stats.rs  toast.rs
src/items/: load_test.rs  mod.rs
src/level/: feature_garden.rs  mod.rs
src/player/: inputs.rs  mod.rs  states.rs
src/rpg_data/: core.rs  file_test.rs  mod.rs  npc.rs  player.rs
