[package]
name = "bevy_15_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["file_watcher"] }
bevy-inspector-egui = "0.28.0"
leafwing-input-manager = "0.16.0"
seldom_state = { version = "0.12.0", features = ["leafwing_input"] }
serde = "1.0.217"
serde_json = "1.0.134"
